import 'package:bookify/src/core/enums/repeat_hour_time_type.dart';
import 'package:bookify/src/core/extensions/size/size_for_small_device_extension.dart';
import 'package:bookify/src/domain/models/user_hour_time_model.dart';
import 'package:bookify/src/features/programming_reading/views/widgets/hour_time_selected_widget.dart';
import 'package:bookify/src/features/programming_reading/views/widgets/repeat_time_widget.dart';
import 'package:bookify/src/shared/widgets/buttons/bookify_elevated_button.dart';
import 'package:bookify/src/shared/widgets/buttons/bookify_outlined_button.dart';
import 'package:flutter/material.dart';
import 'package:localization/localization.dart';

class ProgrammingHourLoadedStateWidget extends StatefulWidget {
  final void Function(UserHourTimeModel userHourTimeModel) onSelectedUserModel;
  final void Function() onRemoveReadingNotification;
  final UserHourTimeModel? initialUserHourTimeModel;

  const ProgrammingHourLoadedStateWidget({
    super.key,
    required this.onSelectedUserModel,
    required this.onRemoveReadingNotification,
    this.initialUserHourTimeModel,
  });

  @override
  State<ProgrammingHourLoadedStateWidget> createState() =>
      _ProgrammingHourLoadedStateWidgetState();
}

class _ProgrammingHourLoadedStateWidgetState
    extends State<ProgrammingHourLoadedStateWidget> {
  late UserHourTimeModel userHourTimeModel;

  @override
  void initState() {
    super.initState();
    userHourTimeModel = UserHourTimeModel(
      repeatHourTimeType:
          widget.initialUserHourTimeModel?.repeatHourTimeType ??
          RepeatHourTimeType.daily,
      startingHour: widget.initialUserHourTimeModel?.startingHour ?? 7,
      startingMinute: widget.initialUserHourTimeModel?.startingMinute ?? 0,
      endingHour: widget.initialUserHourTimeModel?.endingHour ?? 8,
      endingMinute: widget.initialUserHourTimeModel?.endingMinute ?? 0,
    );
  }

  @override
  Widget build(BuildContext context) {
    final colorScheme = Theme.of(context).colorScheme;

    return SafeArea(
      child: LayoutBuilder(
        builder: (context, constraints) {
          final isSmallDevice = constraints.biggest.isSmallDevice();

          return SingleChildScrollView(
            child: SizedBox(
              height: isSmallDevice
                  ? MediaQuery.sizeOf(context).height
                  : constraints.biggest.height,
              child: Padding(
                padding: const EdgeInsets.all(16.0),
                child: Column(
                  children: [
                    Align(
                      alignment: Alignment.topRight,
                      child: IconButton(
                        onPressed: Navigator.of(context).pop,
                        icon: Icon(
                          Icons.close_rounded,
                          color: colorScheme.secondary,
                        ),
                      ),
                    ),
                    const SizedBox(
                      height: 10,
                    ),
                    RepeatTimeWidget(
                      key: const Key('RepeatTimeWidget'),
                      initialRepeatTimeSelected: userHourTimeModel
                          .repeatHourTimeType
                          .toIntValue(),
                      onSelectedRepeatTime: (int selectedRepeatTime) {
                        setState(() {
                          userHourTimeModel = userHourTimeModel.copyWith(
                            repeatHourTimeType: RepeatHourTimeType.toType(
                              selectedRepeatTime,
                            ),
                          );
                        });
                      },
                    ),
                    const SizedBox(
                      height: 40,
                    ),
                    HourTimeSelectedWidget(
                      key: const Key('HourTimeSelectedWidget'),
                      userHourTimeModel: userHourTimeModel,
                      onSelectedTimes:
                          (
                            TimeOfDay startingTime,
                            TimeOfDay endingTime,
                          ) {
                            setState(() {
                              userHourTimeModel = userHourTimeModel.copyWith(
                                startingHour: startingTime.hour,
                                startingMinute: startingTime.minute,
                                endingHour: endingTime.hour,
                                endingMinute: endingTime.minute,
                              );
                            });
                          },
                    ),
                    const SizedBox(
                      height: 10,
                    ),
                    if (widget.initialUserHourTimeModel == null)
                      Text(
                        'hint-reading-time-notification-description'.i18n(),
                        textAlign: TextAlign.center,
                        style: const TextStyle(
                          color: Colors.grey,
                          fontSize: 12,
                        ),
                      ),
                    const Spacer(),
                    if (widget.initialUserHourTimeModel != null)
                      BookifyOutlinedButton.expanded(
                        text: 'remove-reading-time-notification-button'.i18n(),
                        suffixIcon: Icons.notifications_off_rounded,
                        onPressed: widget.onRemoveReadingNotification,
                      ),
                    BookifyElevatedButton.expanded(
                      key: const Key('FinishButton'),
                      text: 'finish-button'.i18n(),
                      suffixIcon: Icons.check_rounded,
                      onPressed: () {
                        widget.onSelectedUserModel(userHourTimeModel);
                      },
                    ),
                  ],
                ),
              ),
            ),
          );
        },
      ),
    );
  }
}
