...
              const Spacer(),
              const ReadingHourIntroductionText(),
              const Spacer(),
              Row(
                children: [
                  Flexible(
                    key: const Key('LateCalculateHourButton'),
                    child: BookifyOutlinedButton.expanded(
                      text: 'choose-later-button'.i18n(),
                      onPressed: () => Navigator.pop(context),
                    ),
                  ),
                  const SizedBox(
                    width: 5,
                  ),
                  Flexible(
                    child: BookifyElevatedButton.expanded(
                      key: const Key('ScheduleNowButton'),
                      text: 'schedule-now-button'.i18n(),
                      onPressed: () async {
                        await Navigator.pushNamed(
                          context,
                          ProgrammingReadingPage.routeName,
                        );
...
