...
                style: const ButtonStyle(
                  foregroundColor: WidgetStatePropertyAll(Colors.white),
                  textStyle: WidgetStatePropertyAll(TextStyle(fontSize: 16)),
                ),
              ),
              DropdownMenuEntry(
                label: 'weekly-dropdown-menu-entry'.i18n(),
                value: 2,
                style: const ButtonStyle(
                  foregroundColor: WidgetStatePropertyAll(Colors.white),
                  textStyle: WidgetStatePropertyAll(TextStyle(fontSize: 16)),
                ),
              ),
...
