...
                      },
                      hour: endingTime.hour,
                      minute: endingTime.minute,
                    ),
                    const Spacer(),
                    BookifyOutlinedButton.expanded(
                      key: const Key('DefineReturnButton'),
                      text: 'define-return-button'.i18n(),
                      onPressed: _defineTimer,
                    ),
                  ],
                ),
              ),
...
